--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "postcss-preset-env": "^6.7.0",
     "postcss-selector-not": "^4.0.0",
     "prettier": "^2.2.1",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
+    "tailwindcss-blend-mode": "^1.0.0"
   }
 }
